--- a/Shared/Config/sql_statement.ini
+++ b/Shared/Config/sql_statement.ini
@@ -1,7 +1,7 @@
 [db_connect]
 conn = DRIVER={/usr/local/lib/libmsodbcsql.13.dylib};Server=10.101.2.74;Database=MaRSDataCatalyst_Dev2017aug;uid=mdc_user;pwd=riverByThe@lakes;
 
-[db_sql]
+[db_sql_general]
 sql_select = SELECT * FROM {}
 sql_select_list = SELECT {} FROM {}
 sql_max = SELECT Max({}) FROM {}
@@ -9,3 +9,15 @@ sql_count = SELECT COUNT(*) FROM {}
 sql_insert = INSERT INTO {} VALUES {}
 sql_update = UPDATE {} SET {} = {} WHERE {} = {}
 sql_delete = DELETE {} WHERE {}
+
+
+
+[db_sql_batch]
+
+sql_batch_select = SELECT DISTINCT BatchID FROM Config.ImportBatch WHERE Year = {} AND Quarter = \'Q{}\' SourceSystemID IN {}
+sql_batch_insert = INSERT INTO {} Values (?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?)
+sql_batch_update = Update {} SET BatchId = {} WHERE SourceSytemID = {}
+sql_batch_delete = DELETE FROM {} WHERE BatchID IN {}
+sql_batch_table = SELECT BatchID FROM {} WHERE BatchID IN {}
+sql_batch_count = SELECT COUNT(*) AS Total FROM {} WHERE BatchID IN {}
+
