Matching object implementation for company matching for all data souce as a common and shared object.

--- a/Shared/Config/sql_statement.ini
+++ b/Shared/Config/sql_statement.ini
@@ -11,13 +11,23 @@ sql_update = UPDATE {} SET {} = {} WHERE {} = {}
 sql_delete = DELETE {} WHERE {}
 
 
-
 [db_sql_batch]
-
 sql_batch_select = SELECT DISTINCT BatchID FROM Config.ImportBatch WHERE Year = {} AND Quarter = \'Q{}\' SourceSystemID IN {}
 sql_batch_insert = INSERT INTO {} Values (?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?)
 sql_batch_update = Update {} SET BatchId = {} WHERE SourceSytemID = {}
 sql_batch_delete = DELETE FROM {} WHERE BatchID IN {}
 sql_batch_table = SELECT BatchID FROM {} WHERE BatchID IN {}
 sql_batch_count = SELECT COUNT(*) AS Total FROM {} WHERE BatchID IN {}
+
+[db_sql_common]
+sql_get_max = SELECT MAX({}) AS MaxID FROM {}
+sql_data_by_batch = SELECT * FROM {} WHERE BatchID IN {}
+
+[da_sql_company]
+sql_dim_company_insert = INSERT INTO [Reporting].[DimCompany] VALUES ({},\'{}\',\'{}\',\'{}\',\'{}\',\'{}\',\'{}\',\'{}\',\'{}\',{},\'{}\',\'{}\')
+sql_dim_company_source_insert = INSERT INTO [Reporting].[DimCompanySource] VALUES ({},{},\'{}\',\'{}\',{},{},\'{}\',\'{}\',\'{}\'
+sql_dim_company_source_update = UPDATE [Reporting].[DimCompanySource] SET CompanyID = {} WHERE Name = \'{}\'
+sql_dim_company = SELECT  CompanyID,[CompanyName] FROM {} WHERE CompanyName IS NOT NULL
+sql_dim_company_source = SELECT  CompanyID, [Name] as [CompanyName] FROM {} WHERE [Name] IS NOT NULL
+sql_update_company_source = UPDATE [Config].[CompanyDataRaw] SET CompanyID = {} WHERE ID = {}
 
