Bap report second round re-write.[With a lot of minor updates to shared classes]

--- a/Shared/Config/config.ini
+++ b/Shared/Config/config.ini
@@ -1,4 +1,6 @@
 
+#File paths
+
 [box_file_path]
 path_bap = Box Sync/MDC Shared/Innovation Economy/Data/ETL/BAP
 path_cbinsights = Box Sync/MDC Shared/Innovation Economy/Data/ETL/CBINSIGHTS
@@ -10,3 +12,8 @@ path_survey = Box Sync/MDC Shared/Innovation Economy/Data/ETL/SURVEY
 path_tdw = Box Sync/MDC Shared/Innovation Economy/Data/ETL/TDW
 path_tr = Box Sync/MDC Shared/Innovation Economy/Data/ETL/TR
 path_web_scrape = Box Sync/MDC Shared/Innovation Economy/Data/ETL/WEBSCRAPE
+
+# File types
+[box_file_type]
+spread_sheet = ['xlsx','xls']
+csv_files = ['.csv']
