--- a/Shared/sql_statement.ini
+++ b/Shared/sql_statement.ini
@@ -31,3 +31,5 @@ sql_dim_company = SELECT  CompanyID,[CompanyName] FROM {} WHERE CompanyName IS N
 sql_dim_company_source = SELECT  CompanyID, [Name] as [CompanyName] FROM {} WHERE [Name] IS NOT NULL
 sql_update_company_source = UPDATE [Config].[CompanyDataRaw] SET CompanyID = {} WHERE ID = {}
 
+[db_sql_bap]
+sql_program_insert = INSERT INTO[Config].[CompanyAggProgram] Values (?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?)
