System wide clean up and refactoring.

--- a/Shared/config.ini
+++ b/Shared/config.ini
@@ -3,7 +3,8 @@
 [db_connect]
 #conn = DRIVER={/usr/local/lib/libmsodbcsql.13.dylib};Server=10.101.2.74;Database=MDC_BAP_Quarterly;Trusted_Connection=yes;
 #conn = DRIVER={/usr/local/lib/libmsodbcsql.13.dylib};Server=10.101.2.74;Database=MaRSDataCatalyst_Dev2017aug;uid=mdc_user;pwd=riverByThe@lakes;
-conn = DRIVER={/usr/local/lib/libmsodbcsql.13.dylib};Server=10.101.2.74;Database=MaRSDataCatalyst;uid=sa;pwd=Jethro!2;
+#conn = DRIVER={/usr/local/lib/libmsodbcsql.13.dylib};Server=10.101.2.74;Database=MaRSDataCatalyst;uid=sa;pwd=Jethro!2;
+conn = DRIVER={/usr/local/lib/libmsodbcsql.13.dylib};Server=10.101.2.74;Database=MDCDW;uid=sa;pwd=Jethro!2;
 
 #File paths
 
