Crunchbase api data for organizations and people.

--- a/Shared/config.ini
+++ b/Shared/config.ini
@@ -24,3 +24,13 @@ path_web_scrape = Box Sync/mnadew/IE/Data/ETL/WEBSCRAPE
 [box_file_type]
 spread_sheet = ['xlsx','xls']
 csv_files = ['.csv']
+
+#Crunchbase Details
+[crunch_base]
+url_with_location = https://api.crunchbase.com/v3.1/organizations?user_key=afeba35e3b1a7478009c8d73bbab367a&locations=canada
+user_key = afeba35e3b1a7478009c8d73bbab367a
+url_org = https://api.crunchbase.com/v3.1/organizations?locations=canada
+url_person = https://api.crunchbase.com/v3.1/people
+url_prd = https://api.crunchbase.com/v3.1/products
+url_cat = https://api.crunchbase.com/v3.1/categories
+url_loc = https://api.crunchbase.com/v3.1/locations
