Crunchbase api data download methods for [Organizations, People, Categories and Locations] completed.

--- a/Shared/config.ini
+++ b/Shared/config.ini
@@ -19,6 +19,7 @@ path_survey = Box Sync/mnadew/IE/Data/ETL/SURVEY
 path_tdw = Box Sync/mnadew/IE/Data/ETL/TDW
 path_tr = Box Sync/mnadew/IE/Data/ETL/TR
 path_web_scrape = Box Sync/mnadew/IE/Data/ETL/WEBSCRAPE
+path_data = Box Sync/mnadew/IE/Data
 
 # File types
 [box_file_type]
@@ -30,7 +31,6 @@ csv_files = ['.csv']
 url_with_location = https://api.crunchbase.com/v3.1/organizations?user_key=afeba35e3b1a7478009c8d73bbab367a&locations=canada
 user_key = afeba35e3b1a7478009c8d73bbab367a
 url_org = https://api.crunchbase.com/v3.1/organizations?locations=canada
-url_person = https://api.crunchbase.com/v3.1/people
-url_prd = https://api.crunchbase.com/v3.1/products
+url_person = https://api.crunchbase.com/v3.1/people?locations=canada
 url_cat = https://api.crunchbase.com/v3.1/categories
-url_loc = https://api.crunchbase.com/v3.1/locations
+url_loc = https://api.crunchbase.com/v3.1/locations?items_per_page=250
