BAP Quarterly Program youth sheet QA implemented.

--- a/Shared/config_sql.ini
+++ b/Shared/config_sql.ini
@@ -33,3 +33,9 @@ sql_update_company_source = UPDATE [Config].[CompanyDataRaw] SET CompanyID = {} 
 
 [db_sql_bap]
 sql_program_insert = INSERT INTO[Config].[CompanyAggProgram] Values (?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?)
+
+[db_sql_crunchbase]
+sql_organizations_insert = INSERT INTO [CRUNCHBASE].[OrganizationsSummary] VALUES (?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?)
+sql_people_insert = INSERT INTO [CRUNCHBASE].[People] VALUES (?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?)
+sql_category_insert = INSERT INTO [CRUNCHBASE].[Category] VALUES (?,?,?,?,?,?,?,?,?)
+sql_location_insert = INSERT INTO [CRUNCHBASE].[Location] VALUES (?,?,?,?,?,?,?,?,?,?,?,?,?,?)
