--- a/Shared/config.ini
+++ b/Shared/config.ini
@@ -4,13 +4,15 @@
 #conn = DRIVER={/usr/local/lib/libmsodbcsql.13.dylib};Server=10.101.2.74;Database=MDC_BAP_Quarterly;Trusted_Connection=yes;
 #conn = DRIVER={/usr/local/lib/libmsodbcsql.13.dylib};Server=10.101.2.74;Database=MaRSDataCatalyst_Dev2017aug;uid=mdc_user;pwd=riverByThe@lakes;
 #conn = DRIVER={/usr/local/lib/libmsodbcsql.13.dylib};Server=10.101.2.74;Database=MaRSDataCatalyst;uid=sa;pwd=Jethro!2;
-conn = DRIVER={/usr/local/lib/libmsodbcsql.13.dylib};Server=10.101.2.74;Database=MDCDW;uid=sa;pwd=Jethro!2;
+#conn = DRIVER={/usr/local/lib/libmsodbcsql.13.dylib};Server=10.101.2.74;Database=MDCDW;uid=sa;pwd=Jethro!2;
+conn = DRIVER={/usr/local/lib/libmsodbcsql.13.dylib};Server=10.101.2.74;Database=MDCRaw;uid=sa;pwd=Jethro!2;
 
 #File paths
 [box_file_path]
 path_bap = Box Sync/mnadew/IE/Data/ETL/BAP
+path_bap_qa = Box Sync/mnadew/IE/Data/ETL/BAP/BAP_QA
 path_cbinsights = Box Sync/mnadew/IE/Data/ETL/CBINSIGHTS
-path_crunchbase = Box Sync/mnadew/IE/Data/ETL/CRUNCHBASE
+path_crunchbase = Box Sync/mnadew/IE/Data/ETL/CrunchBase
 path_cvca = Box Sync/mnadew/IE/Data/ETL/CVCA
 path_iaf = Box Sync/mnadew/IE/Data/ETL/IAF
 path_osvp = Box Sync/mnadew/IE/Data/ETL/OSVP
