Combined all RICs file data from spreadsheet to the database implementation.

--- a/Shared/config.ini
+++ b/Shared/config.ini
@@ -11,6 +11,7 @@ conn = DRIVER={/usr/local/lib/libmsodbcsql.13.dylib};Server=10.101.2.74;Database
 [box_file_path]
 path_bap = Box Sync/mnadew/IE/Data/ETL/BAP
 path_bap_qa = Box Sync/mnadew/IE/Data/ETL/BAP/BAP_QA
+path_bap_combined = Box Sync/mnadew/IE/Data/ETL/BAP/BAP Combined
 path_cbinsights = Box Sync/mnadew/IE/Data/ETL/CBINSIGHTS
 path_crunchbase = Box Sync/mnadew/IE/Data/ETL/CrunchBase
 path_cvca = Box Sync/mnadew/IE/Data/ETL/CVCA
