Organization relationship entities data extraction.

--- a/Shared/config.ini
+++ b/Shared/config.ini
@@ -36,3 +36,5 @@ url_org = https://api.crunchbase.com/v3.1/organizations?locations=canada
 url_person = https://api.crunchbase.com/v3.1/people?locations=canada
 url_cat = https://api.crunchbase.com/v3.1/categories
 url_loc = https://api.crunchbase.com/v3.1/locations?items_per_page=250
+
+url_relationship = https://api.crunchbase.com/v3.1/organizations/{}?relationships={}&user_key=afeba35e3b1a7478009c8d73bbab367a
