--- a/Shared/config_sql.ini
+++ b/Shared/config_sql.ini
@@ -39,3 +39,15 @@ sql_organizations_insert = INSERT INTO [CRUNCHBASE].[OrganizationsSummary] VALUE
 sql_people_insert = INSERT INTO [CRUNCHBASE].[People] VALUES (?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?)
 sql_category_insert = INSERT INTO [CRUNCHBASE].[Category] VALUES (?,?,?,?,?,?,?,?,?)
 sql_location_insert = INSERT INTO [CRUNCHBASE].[Location] VALUES (?,?,?,?,?,?,?,?,?,?,?,?,?,?)
+
+sql_orgs_summary = SELECT TOP 10 api_url, data_fetched, uuid FROM Crunchbase.OrganizationsSummary WHERE data_fetched = 0
+
+sql_orgs_detail_insert = INSERT INTO [CRUNCHBASE].[OrganizationDetail]
+           ([permalink],[api_path],[web_path],[api_url],[name],[also_known_as],[short_description],[description],[profile_image_url],
+           [primary_role],[role_company],[role_investor],[role_group],[role_school],[investor_type],[founded_on],[founded_on_trust_code],
+           [is_closed],[closed_on],[closed_on_trust_code],[num_employees_min],[num_employees_max],[stock_exchange],[stock_symbol],
+           [total_funding_usd],[number_of_investments],[homepage_url],[contact_email],[phone_number],[created_at],[updated_at],[org_uuid])
+     VALUES (?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?)
+
+sql_orgs_summary_update = UPDATE [CRUNCHBASE].[OrganizationsSummary] SET data_fetched = 1 WHERE uuid = '{}'
+sql_orgs_detail_update = UPDATE [CRUNCHBASE].[OrganizationDetail] SET data_fetched = 1 WHERE uuid = '{}'
