Organization relationship entities save method.

--- a/Shared/config_sql.ini
+++ b/Shared/config_sql.ini
@@ -42,7 +42,7 @@ sql_location_insert = INSERT INTO [CRUNCHBASE].[Location] VALUES (?,?,?,?,?,?,?,
 
 sql_orgs_summary = SELECT TOP 10 api_url, data_fetched, uuid FROM Crunchbase.OrganizationsSummary WHERE data_fetched = 0
 
-sql_orgs_detail_insert = INSERT INTO [CRUNCHBASE].[OrganizationDetail]
+sql_orgnization_insert = INSERT INTO [CRUNCHBASE].[Organization]
            ([permalink],[api_path],[web_path],[api_url],[name],[also_known_as],[short_description],[description],[profile_image_url],
            [primary_role],[role_company],[role_investor],[role_group],[role_school],[investor_type],[founded_on],[founded_on_trust_code],
            [is_closed],[closed_on],[closed_on_trust_code],[num_employees_min],[num_employees_max],[stock_exchange],[stock_symbol],
@@ -50,4 +50,25 @@ sql_orgs_detail_insert = INSERT INTO [CRUNCHBASE].[OrganizationDetail]
      VALUES (?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?)
 
 sql_orgs_summary_update = UPDATE [CRUNCHBASE].[OrganizationsSummary] SET data_fetched = 1 WHERE uuid = '{}'
-sql_orgs_detail_update = UPDATE [CRUNCHBASE].[OrganizationDetail] SET data_fetched = 1 WHERE uuid = '{}'
+sql_orgs_detail_update = UPDATE [CRUNCHBASE].[Organization] SET data_fetched = 1 WHERE uuid = '{}'
+
+sql_acquired_insert = INSERT INTO [CRUNCHBASE].[Acquired_by] VALUES (?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?)
+sql_acquiree_insert = INSERT INTO [CRUNCHBASE].[Acquiree] VALUES (?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?)
+sql_acquisition_insert = INSERT INTO [CRUNCHBASE].[Acquisition] VALUES (?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?)
+sql_category_insert = INSERT INTO [CRUNCHBASE].[Category] VALUES (?,?,?,?,?,?,?,?,?)
+sql_founders_insert = INSERT INTO [CRUNCHBASE].[Founders] VALUES (?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?)
+sql_funding_rounds_insert = INSERT INTO [CRUNCHBASE].[Funding_Rounds] VALUES (?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?)
+sql_funds_insert = INSERT INTO [CRUNCHBASE].[Funds] VALUES (?,?,?,?,?,?,?,?,?,?,?,?)
+sql_image_insert = INSERT INTO [CRUNCHBASE].[Image] VALUES (?,?,?,?,?,?,?,?,?,?)
+sql_investments_insert = INSERT INTO [CRUNCHBASE].[Investments] VALUES (?,?,?,?,?,?,?,?,?,?)
+sql_investors_insert = INSERT INTO [CRUNCHBASE].[Investments] VALUES (?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?)
+sql_ipo_insert = INSERT INTO [CRUNCHBASE].[IPO] VALUES (?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?)
+sql_job_insert = INSERT INTO [CRUNCHBASE].[Job] VALUES (?,?,?,?,?,?,?,?,?,?)
+sql_news_insert = INSERT INTO [CRUNCHBASE].[News] VALUES (?,?,?,?,?,?,?,?,?)
+sql_offices_insert = INSERT INTO [CRUNCHBASE].[Offices] VALUES (?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?)
+sql_partners_insert = INSERT INTO [CRUNCHBASE].[Partners] VALUES (?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?)
+sql_sub_organization_insert = INSERT INTO [CRUNCHBASE].[SubOrganization] VALUES (?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?)
+sql_team_insert = INSERT INTO [CRUNCHBASE].[Team] VALUES (?,?,?,?,?,?,?,?,?,?,?)
+sql_websites_insert = INSERT INTO [CRUNCHBASE].[Websites] VALUES (?,?,?,?,?,?,?)
+
+
