--- a/Shared/config_sql.ini
+++ b/Shared/config_sql.ini
@@ -40,7 +40,7 @@ sql_people_insert = INSERT INTO [CRUNCHBASE].[People] VALUES (?,?,?,?,?,?,?,?,?,
 sql_category_insert = INSERT INTO [CRUNCHBASE].[Category] VALUES (?,?,?,?,?,?,?,?,?)
 sql_location_insert = INSERT INTO [CRUNCHBASE].[Location] VALUES (?,?,?,?,?,?,?,?,?,?,?,?,?,?)
 
-sql_orgs_summary = SELECT TOP 10 api_url, data_fetched, uuid FROM Crunchbase.OrganizationsSummary WHERE data_fetched = 0
+sql_orgs_summary = SELECT TOP 10 api_url, data_fetched, uuid FROM Crunchbase.OrganizationsSummary WHERE [permalink] LIKE 'carl-data-solutions'
 
 sql_orgnization_insert = INSERT INTO [CRUNCHBASE].[Organization]
            ([permalink],[api_path],[web_path],[api_url],[name],[also_known_as],[short_description],[description],[profile_image_url],
@@ -50,12 +50,12 @@ sql_orgnization_insert = INSERT INTO [CRUNCHBASE].[Organization]
      VALUES (?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?)
 
 sql_orgs_summary_update = UPDATE [CRUNCHBASE].[OrganizationsSummary] SET data_fetched = 1 WHERE uuid = '{}'
-sql_orgs_detail_update = UPDATE [CRUNCHBASE].[Organization] SET data_fetched = 1 WHERE uuid = '{}'
+sql_orgs_detail_update = UPDATE [CRUNCHBASE].[Organization] SET data_fetched = 1 WHERE org_uuid = '{}'
 
-sql_acquired_insert = INSERT INTO [CRUNCHBASE].[Acquired_by] VALUES (?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?)
+sql_acquired_insert = INSERT INTO [CRUNCHBASE].[Acquired_by] VALUES (?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?)
 sql_acquiree_insert = INSERT INTO [CRUNCHBASE].[Acquiree] VALUES (?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?)
 sql_acquisition_insert = INSERT INTO [CRUNCHBASE].[Acquisition] VALUES (?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?)
-sql_category_insert = INSERT INTO [CRUNCHBASE].[Category] VALUES (?,?,?,?,?,?,?,?,?)
+sql_org_category_insert = INSERT INTO [CRUNCHBASE].[Org_Category] VALUES (?,?,?,?,?,?,?)
 sql_founders_insert = INSERT INTO [CRUNCHBASE].[Founders] VALUES (?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?)
 sql_funding_rounds_insert = INSERT INTO [CRUNCHBASE].[Funding_Rounds] VALUES (?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?)
 sql_funds_insert = INSERT INTO [CRUNCHBASE].[Funds] VALUES (?,?,?,?,?,?,?,?,?,?,?,?)
@@ -70,5 +70,7 @@ sql_partners_insert = INSERT INTO [CRUNCHBASE].[Partners] VALUES (?,?,?,?,?,?,?,
 sql_sub_organization_insert = INSERT INTO [CRUNCHBASE].[SubOrganization] VALUES (?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?)
 sql_team_insert = INSERT INTO [CRUNCHBASE].[Team] VALUES (?,?,?,?,?,?,?,?,?,?,?)
 sql_websites_insert = INSERT INTO [CRUNCHBASE].[Websites] VALUES (?,?,?,?,?,?,?)
+sql_person_insert = INSERT INTO [CRUNCHBASE].[Person] VALUES (?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?)
+sql_invested_in_insert = INSERT INTO [CRUNCHBASE].[Person] VALUES (?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?)
 
 
