Haltech BAP report validation data collection.

--- a/Shared/config_sql.ini
+++ b/Shared/config_sql.ini
@@ -40,7 +40,7 @@ sql_people_insert = INSERT INTO [CRUNCHBASE].[People] VALUES (?,?,?,?,?,?,?,?,?,
 sql_category_insert = INSERT INTO [CRUNCHBASE].[Category] VALUES (?,?,?,?,?,?,?,?,?)
 sql_location_insert = INSERT INTO [CRUNCHBASE].[Location] VALUES (?,?,?,?,?,?,?,?,?,?,?,?,?,?)
 
-sql_orgs_summary = SELECT TOP 10 api_url, data_fetched, uuid FROM Crunchbase.OrganizationsSummary WHERE [permalink] LIKE 'carl-data-solutions'
+sql_orgs_summary = SELECT TOP 10 api_url, data_fetched, uuid FROM Crunchbase.OrganizationsSummary WHERE [permalink] LIKE 'wattpad'
 
 sql_orgnization_insert = INSERT INTO [CRUNCHBASE].[Organization]
            ([permalink],[api_path],[web_path],[api_url],[name],[also_known_as],[short_description],[description],[profile_image_url],
