--- a/Shared/config.ini
+++ b/Shared/config.ini
@@ -6,7 +6,7 @@
 #conn = DRIVER={/usr/local/lib/libmsodbcsql.13.dylib};Server=10.101.2.74;Database=MaRSDataCatalyst;uid=mdc_user;pwd=riverByThe@lakes;
 #conn = DRIVER={/usr/local/lib/libmsodbcsql.13.dylib};Server=10.101.2.74;Database=MDCDW;uid=mdc_user;pwd=riverByThe@lakes;
 #conn = DRIVER={/usr/local/lib/libmsodbcsql.13.dylib};Server=10.101.2.74;Database=MaRSDataCatalyst_Dev2017aug;uid=mdc_user;pwd=riverByThe@lakes;
-conn = DRIVER={/usr/local/lib/libmsodbcsql.13.dylib};Server=10.101.2.74;Database=MDCRaw;uid=sa;pwd=Jethro!2;
+conn = DRIVER={/usr/local/lib/libmsodbcsql.13.dylib};Server=10.101.2.74;Database=MaRSDataCatalyst;uid=sa;pwd=Jethro!2;
 
 
 
@@ -26,6 +26,8 @@ path_tr = Box Sync/mnadew/IE/Data/ETL/TR
 path_web_scrape = Box Sync/mnadew/IE/Data/ETL/WEBSCRAPE
 path_data = Box Sync/mnadew/IE/Data
 
+path_validI = /Users/mnadew/Box Sync/MDC Shared/Innovation Economy/Data/BAP/Quarterly Data/BAP_FY18/Haltech Validation
+path_validII = /Users/mnadew/Box Sync/MDC Shared/Innovation Economy/Data/BAP/Quarterly Data/BAP_FY18/Haltech Validation
 
 
 # File types
