updated config file and common func references in menu_actions

--- a/Shared/config.ini
+++ b/Shared/config.ini
@@ -52,32 +52,32 @@ path = /Users/gcree/Box Sync/MaRS DataCatalyst 2017 CONFIDENTIAL/JLABS Toronto A
 path = /Users/gcree/Box Sync/MaRS DataCatalyst 2017 CONFIDENTIAL/JLABS Toronto Annual Survey 2017/Target Lists/test_tgt_lst.xlsx
 
 [sql_queries]
-insert_survey_entry = INSERT INTO JLABS.Surveys (WHAT_HEADERS) VALUES (WHAT_VALUES)
-insert_qs = INSERT INTO JLABS.Questions (WHAT_HEADERS) VALUES (WHAT_VALUES)
-insert_os = INSERT INTO JLABS.Question_Options (WHAT_HEADERS) VALUES (WHAT_VALUES)
-insert_as = INSERT INTO JLABS.Question_Answers (WHAT_HEADERS) VALUES (WHAT_VALUES)
-insert_rs = INSERT INTO JLABS.Survey_Responses (WHAT_HEADERS) VALUES (WHAT_VALUES)
-update_rs = UPDATE JLABS.Survey_Responses SET
-update_a_sql = UPDATE JLABS.Question_Answers SET
-insert_contactlists = INSERT INTO JLABS.Contact_Lists (WHAT_HEADERS) VALUES (WHAT_VALUES)
-insert_contacts__lists = INSERT INTO JLABS.Contacts__Lists (WHAT_HEADERS) VALUES (WHAT_VALUES)
-check_questions_exist = SELECT CASE WHEN EXISTS (SELECT * FROM JLABS.Questions Q, JLABS.Surveys S WHERE Q.survey_id = S.id  AND S.id LIKE WHAT_SURVEY_ID) THEN CAST(1 AS BIT) ELSE CAST(0 AS BIT) END
-all_answer_ids_for_survey = SELECT A.id, A.id id_in_DB FROM JLABS.Question_Answers A, JLABS.Questions Q, JLABS.Surveys S WHERE A.question_id = Q.id AND Q.survey_id = S.id AND S.id =	WHAT_SURVEY_ID
-all_resp_ids_for_survey = SELECT * FROM JLABS.Survey_Responses R, JLABS.Surveys S WHERE R.survey_id = S.id AND S.id = WHAT_SURVEY_ID
-all_resps_for_survey = SELECT DISTINCT * FROM JLABS.Survey_Responses R WHERE R.survey_id = WHAT_SURVEY_ID
-all_contacts = SELECT id, email_address, firstname, lastname FROM JLABS.Contacts
-contact_lists = SELECT id FROM JLABS.Contact_Lists
-contacts__lists = SELECT sg_cid FROM JLABS.Contacts__Lists
-del_ans = DELETE FROM JLABS.Question_Answers WHERE survey_response_id = WHAT_RESP_ID
-check_ans = SELECT id FROM JLABS.Question_Answers WHERE survey_response_id IN (WHAT_RESP_IDS)
-del_ans_by_respids = DELETE FROM JLABS.Question_Answers WHERE survey_response_id IN (WHAT_RESP_IDS)
-del_resps_by_list = DELETE FROM JLABS.Survey_Responses WHERE id IN (WHAT_RESP_IDS)
-insert_contacts = INSERT INTO JLABS.Contacts (WHAT_HEADERS) VALUES (WHAT_VALUES)
-all_contacts__lists = SELECT * FROM JLABS.Contacts__Lists
-insert_contacts_lists = INSERT INTO JLABS.Contacts__Lists (WHAT_HEADERS) VALUES (WHAT_VALUES)
-insert_resp_reports = INSERT INTO JLABS.Resp_Status_Reports (WHAT_HEADERS) VALUES (WHAT_VALUES)
-insert_resp_stats = INSERT INTO JLABS.Response_Statuses (WHAT_HEADERS) VALUES (WHAT_VALUES)
-insert_campaigns = INSERT INTO JLABS.Campaigns (WHAT_HEADERS) VALUES (WHAT_VALUES)
-campaigns_for_survey = SELECT id FROM JLABS.Campaigns WHERE survey_id = WHAT_SURVEY_ID
-emails_for_campaign = SELECT id FROM JLABS.Email_Messages WHERE campaign_id = WHAT_CAMPAIGN
-insert_emails = INSERT INTO JLABS.Email_Messages (WHAT_HEADERS) VALUES (WHAT_VALUES)
+insert_survey_entry = INSERT INTO SURVEY.Surveys (WHAT_HEADERS) VALUES (WHAT_VALUES)
+insert_qs = INSERT INTO SURVEY.Questions (WHAT_HEADERS) VALUES (WHAT_VALUES)
+insert_os = INSERT INTO SURVEY.Question_Options (WHAT_HEADERS) VALUES (WHAT_VALUES)
+insert_as = INSERT INTO SURVEY.Question_Answers (WHAT_HEADERS) VALUES (WHAT_VALUES)
+insert_rs = INSERT INTO SURVEY.Survey_Responses (WHAT_HEADERS) VALUES (WHAT_VALUES)
+update_rs = UPDATE SURVEY.Survey_Responses SET
+update_a_sql = UPDATE SURVEY.Question_Answers SET
+insert_contactlists = INSERT INTO SURVEY.Contact_Lists (WHAT_HEADERS) VALUES (WHAT_VALUES)
+insert_contacts__lists = INSERT INTO SURVEY.Contacts__Lists (WHAT_HEADERS) VALUES (WHAT_VALUES)
+check_questions_exist = SELECT CASE WHEN EXISTS (SELECT * FROM SURVEY.Questions Q, SURVEY.Surveys S WHERE Q.survey_id = S.id  AND S.id LIKE WHAT_SURVEY_ID) THEN CAST(1 AS BIT) ELSE CAST(0 AS BIT) END
+all_answer_ids_for_survey = SELECT A.id, A.id id_in_DB FROM SURVEY.Question_Answers A, SURVEY.Questions Q, SURVEY.Surveys S WHERE A.question_id = Q.id AND Q.survey_id = S.id AND S.id =	WHAT_SURVEY_ID
+all_resp_ids_for_survey = SELECT * FROM SURVEY.Survey_Responses R, SURVEY.Surveys S WHERE R.survey_id = S.id AND S.id = WHAT_SURVEY_ID
+all_resps_for_survey = SELECT DISTINCT * FROM SURVEY.Survey_Responses R WHERE R.survey_id = WHAT_SURVEY_ID
+all_contacts = SELECT id, email_address, firstname, lastname FROM SURVEY.Contacts
+contact_lists = SELECT id FROM SURVEY.Contact_Lists
+contacts__lists = SELECT sg_cid FROM SURVEY.Contacts__Lists
+del_ans = DELETE FROM SURVEY.Question_Answers WHERE survey_response_id = WHAT_RESP_ID
+check_ans = SELECT id FROM SURVEY.Question_Answers WHERE survey_response_id IN (WHAT_RESP_IDS)
+del_ans_by_respids = DELETE FROM SURVEY.Question_Answers WHERE survey_response_id IN (WHAT_RESP_IDS)
+del_resps_by_list = DELETE FROM SURVEY.Survey_Responses WHERE id IN (WHAT_RESP_IDS)
+insert_contacts = INSERT INTO SURVEY.Contacts (WHAT_HEADERS) VALUES (WHAT_VALUES)
+all_contacts__lists = SELECT * FROM SURVEY.Contacts__Lists
+insert_contacts_lists = INSERT INTO SURVEY.Contacts__Lists (WHAT_HEADERS) VALUES (WHAT_VALUES)
+insert_resp_reports = INSERT INTO SURVEY.Resp_Status_Reports (WHAT_HEADERS) VALUES (WHAT_VALUES)
+insert_resp_stats = INSERT INTO SURVEY.Response_Statuses (WHAT_HEADERS) VALUES (WHAT_VALUES)
+insert_campaigns = INSERT INTO SURVEY.Campaigns (WHAT_HEADERS) VALUES (WHAT_VALUES)
+campaigns_for_survey = SELECT id FROM SURVEY.Campaigns WHERE survey_id = WHAT_SURVEY_ID
+emails_for_campaign = SELECT id FROM SURVEY.Email_Messages WHERE campaign_id = WHAT_CAMPAIGN
+insert_emails = INSERT INTO SURVEY.Email_Messages (WHAT_HEADERS) VALUES (WHAT_VALUES)
