Bap Validation summary for a single RIC completed.

--- a/Shared/config.ini
+++ b/Shared/config.ini
@@ -2,7 +2,8 @@
 #bap quarterly ETL
 [db_connect]
 
-conn = DRIVER={/usr/local/lib/libmsodbcsql.13.dylib};Server=10.101.2.74;Database=MDCRaw;uid=mdc_user;pwd=riverByThe@lakes;
+#conn = DRIVER={/usr/local/lib/libmsodbcsql.13.dylib};Server=10.101.2.74;Database=MDCRaw;uid=mdc_user;pwd=riverByThe@lakes;
+conn = DRIVER={/usr/local/lib/libmsodbcsql.13.dylib};Server=10.101.2.74;Database=MaRSDataCatalyst;uid=mdc_user;pwd=riverByThe@lakes;
 
 #File paths
 [box_file_path]
