BAP FY18 schedule G report validation.

--- a/Shared/config_sql.ini
+++ b/Shared/config_sql.ini
@@ -74,4 +74,9 @@ sql_websites_insert = INSERT INTO [CRUNCHBASE].[Websites] VALUES (?,?,?,?,?,?,?)
 sql_person_insert = INSERT INTO [CRUNCHBASE].[Person] VALUES (?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?)
 sql_invested_in_insert = INSERT INTO [CRUNCHBASE].[Person] VALUES (?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?)
 
-
+#AND CompanyName is NOT NULL
+#AND CompanyName NOT IN ('Company Name', 'Reference ID', 'Former / Alternate Names', 'CRA Business Number',
+#'Street Address', 'City', 'Province', 'Postal Code', 'Website', 'Stage', 'Annual Revenue $CAN', 'Number of Employees',
+#'Funding Raised to Date $CAN', 'Funding Raised in Current Quarter $CAN', 'Date of Incorporation', 'Date of Intake',
+#'High Potential y/n', 'Industry Sector', 'Number of advisory service hours provided', 'Volunteer mentor hours',
+#'Youth y/n', 'Social Enterprise y/n', 'Quarter', 'Fiscal Year')
