--- a/Shared/config.ini
+++ b/Shared/config.ini
@@ -27,6 +27,9 @@ path_data = Box Sync/mnadew/IE/Data
 path_validI = /Users/mnadew/Box Sync/MDC Shared/Innovation Economy/Data/BAP/Quarterly Data/BAP_FY18/Haltech Validation
 path_validII = /Users/mnadew/Box Sync/MDC Shared/Innovation Economy/Data/BAP/Quarterly Data/BAP_FY18/Haltech Validation
 
+path_bap_validation_quarter_one = /Users/mnadew/Box Sync/MDC Shared/Innovation Economy/Data/BAP/Quarterly Data/BAP_FY18/FY18_Q1/for ETL
+path_bap_validation_quarter_two = /Users/mnadew/Box Sync/MDC Shared/Innovation Economy/Data/BAP/Quarterly Data/BAP_FY18/FY18_Q2/for ETL
+
 
 # File types
 [box_file_type]
