--- a/Shared/config.ini
+++ b/Shared/config.ini
@@ -13,7 +13,7 @@ path_bap_qa = Box Sync/MDC Shared/Innovation Economy/Data/BAP/Quarterly Data/BAP
 path_bap_etl = Box Sync/MDC Shared/Innovation Economy/Data/BAP/Quarterly Data/BAP_FY18/FY18_Q3/for ETL
 path_bap_combined = Box Sync/MDC Shared/Innovation Economy/Data/BAP/Quarterly Data/BAP_FY18/FY18_Q3/Combined
 
-path_cbinsights = Box Sync/mnadew/IE/Data/ETL/CBINSIGHTS
+path_cbinsights = Box Sync/MDC Shared/Innovation Economy/Data/CB_Insights/for ETL
 path_crunchbase = Box Sync/mnadew/IE/Data/ETL/CrunchBase
 path_cvca = Box Sync/mnadew/IE/Data/ETL/CVCA
 path_iaf = Box Sync/mnadew/IE/Data/ETL/IAF
