--- a/Shared/config_sql.ini
+++ b/Shared/config_sql.ini
@@ -35,6 +35,10 @@ sql_update_company_source = UPDATE [Config].[CompanyDataRaw] SET CompanyID = {} 
 [db_sql_bap]
 sql_program_insert = INSERT INTO[Config].[CompanyAggProgram] Values (?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?)
 
+[db_sql_cbinsights]
+sql_cbinsights_insert = INSERT INTO [CBINSIGHTS].[CBInsightsFundingData] VALUES (?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?)
+
+
 [db_sql_crunchbase]
 sql_organizations_insert = INSERT INTO [CRUNCHBASE].[OrganizationsSummary] VALUES (?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?)
 sql_people_insert = INSERT INTO [CRUNCHBASE].[People] VALUES (?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?)
