Dataframe to values list conversion updated.

--- a/Shared/config_sql.ini
+++ b/Shared/config_sql.ini
@@ -13,12 +13,14 @@ sql_delete = DELETE {} WHERE {}
 
 
 [db_sql_batch]
-sql_batch_select = SELECT DISTINCT BatchID FROM Config.ImportBatch WHERE Year = {} AND Quarter = \'Q{}\' SourceSystemID IN {}
+sql_batch_select = SELECT DISTINCT BatchID FROM Config.ImportBatch WHERE Year = {} AND Quarter = \'Q{}\' SourceSystemID IN {} AND DataSourceID = {}
 sql_batch_insert = INSERT INTO {} Values (?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?)
+sql_batch_single_insert = INSERT INTO {} Values {}
 sql_batch_update = Update {} SET BatchId = {} WHERE SourceSytemID = {}
 sql_batch_delete = DELETE FROM {} WHERE BatchID IN {}
 sql_batch_table = SELECT BatchID FROM {} WHERE BatchID IN {}
 sql_batch_count = SELECT COUNT(*) AS Total FROM {} WHERE BatchID IN {}
+sql_batch_search = SELECT BatchID FROM {} WHERE {}
 
 [db_sql_common]
 sql_get_max = SELECT MAX({}) AS MaxID FROM {}
@@ -33,10 +35,10 @@ sql_dim_company_source = SELECT  CompanyID, [Name] as [CompanyName] FROM {} WHER
 sql_update_company_source = UPDATE [Config].[CompanyDataRaw] SET CompanyID = {} WHERE ID = {}
 
 [db_sql_bap]
-sql_program_insert = INSERT INTO[Config].[CompanyAggProgram] Values (?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?)
+sql_program_insert = INSERT INTO[Config].[CompanyAggProgram] Values (?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?)
 
 [db_sql_cbinsights]
-sql_cbinsights_insert = INSERT INTO [CBINSIGHTS].[CBInsightsFundingData] VALUES (?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?)
+sql_cbinsights_insert = INSERT INTO [CBINSIGHTS].[CBInsightsFundingData] VALUES (?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?)
 
 
 [db_sql_crunchbase]
