--- a/Shared/config.ini
+++ b/Shared/config.ini
@@ -8,12 +8,12 @@ conn = DRIVER={/usr/local/lib/libmsodbcsql.13.dylib};Server=10.101.2.74;Database
 #File paths
 [box_file_path]
 path_bap = Box Sync/mnadew/IE/Data/ETL/BAP
-path_bap_source = Box Sync/MDC Shared/Innovation Economy/Data/BAP/Quarterly Data/BAP_FY18/FY18_Q3/for QA
-path_bap_qa = Box Sync/MDC Shared/Innovation Economy/Data/BAP/Quarterly Data/BAP_FY18/FY18_Q3/QA
-path_bap_etl = Box Sync/MDC Shared/Innovation Economy/Data/BAP/Quarterly Data/BAP_FY18/FY18_Q3/for ETL
-path_bap_combined = Box Sync/MDC Shared/Innovation Economy/Data/BAP/Quarterly Data/BAP_FY18/FY18_Q3/Combined
+path_bap_source = Box Sync/WorkBench/BAP/BAP_FY18/FY18_Q3/for QA
+path_bap_qa = Box Sync/WorkBench/BAP/BAP_FY18/FY18_Q3/QA
+path_bap_etl = Box Sync/WorkBench/BAP/BAP_FY18/FY18_Q3/for ETL
+path_bap_combined = Box Sync/WorkBench/BAP/BAP_FY18/FY18_Q3/Combined
 
-path_cbinsights = Box Sync/MDC Shared/Innovation Economy/Data/CB_Insights/for ETL
+path_cbinsights = Box Sync/WorkBench/CB_Insights/for ETL
 path_crunchbase = Box Sync/mnadew/IE/Data/ETL/CrunchBase
 path_cvca = Box Sync/mnadew/IE/Data/ETL/CVCA
 path_iaf = Box Sync/mnadew/IE/Data/ETL/IAF
@@ -24,11 +24,11 @@ path_tr = Box Sync/mnadew/IE/Data/ETL/TR
 path_web_scrape = Box Sync/mnadew/IE/Data/ETL/WEBSCRAPE
 path_data = Box Sync/mnadew/IE/Data
 
-path_validI = /Users/mnadew/Box Sync/MDC Shared/Innovation Economy/Data/BAP/Quarterly Data/BAP_FY18/Haltech Validation
-path_validII = /Users/mnadew/Box Sync/MDC Shared/Innovation Economy/Data/BAP/Quarterly Data/BAP_FY18/Haltech Validation
+path_validI = /Users/mnadew/Box Sync/WorkBench/BAP/BAP_FY18/BAP Quarterly Numbers Validation
+path_validII = /Users/mnadew/Box Sync/WorkBench/BAP/BAP_FY18/BAP Quarterly Numbers Validation
 
-path_bap_validation_quarter_one = /Users/mnadew/Box Sync/MDC Shared/Innovation Economy/Data/BAP/Quarterly Data/BAP_FY18/FY18_Q1/for ETL
-path_bap_validation_quarter_two = /Users/mnadew/Box Sync/MDC Shared/Innovation Economy/Data/BAP/Quarterly Data/BAP_FY18/FY18_Q2/for ETL
+path_bap_validation_quarter_one = /Users/mnadew/Box Sync/WorkBench/BAP/BAP_FY18/FY18_Q1/for ETL
+path_bap_validation_quarter_two = /Users/mnadew/Box Sync/WorkBench/BAP/BAP_FY18/FY18_Q2/for ETL
 
 
 # File types
