Helper classes and methods refactoring.

--- a/Shared/config_sql.ini
+++ b/Shared/config_sql.ini
@@ -13,10 +13,10 @@ sql_delete = DELETE {} WHERE {}
 
 
 [db_sql_batch]
-sql_batch_select = SELECT DISTINCT BatchID FROM Config.ImportBatch WHERE Year = {} AND Quarter = \'Q{}\' SourceSystemID IN {} AND DataSourceID = {}
-sql_batch_insert = INSERT INTO {} Values (?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?)
+sql_batch_select = SELECT DISTINCT BatchID FROM Config.ImportBatch WHERE Year = {} AND Quarter = \'Q{}\' AND SourceSystemID = {}
+sql_batch_insert = INSERT INTO CONFIG.ImportBATCH Values (?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?)
 sql_batch_single_insert = INSERT INTO {} Values {}
-sql_batch_update = Update {} SET BatchId = {} WHERE SourceSytemID = {}
+sql_batch_update = Update {} SET BatchId = {} WHERE SourceSytemID = {} AND DataSource = {}
 sql_batch_delete = DELETE FROM {} WHERE BatchID IN {}
 sql_batch_table = SELECT BatchID FROM {} WHERE BatchID IN {}
 sql_batch_count = SELECT COUNT(*) AS Total FROM {} WHERE BatchID IN {}
@@ -30,7 +30,7 @@ sql_data_by_batch = SELECT * FROM {} WHERE BatchID IN {}
 sql_dim_company_insert = INSERT INTO [Reporting].[DimCompany] VALUES ({},\'{}\',\'{}\',\'{}\',\'{}\',\'{}\',\'{}\',\'{}\',\'{}\',{},\'{}\',\'{}\')
 sql_dim_company_source_insert = INSERT INTO [Reporting].[DimCompanySource] VALUES ({},{},\'{}\',\'{}\',{},{},\'{}\',\'{}\',\'{}\'
 sql_dim_company_source_update = UPDATE [Reporting].[DimCompanySource] SET CompanyID = {} WHERE Name = \'{}\'
-sql_dim_company = SELECT  CompanyID,[CompanyName] FROM {} WHERE CompanyName IS NOT NULL
+sql_dim_company = SELECT  CompanyID,[CompanyName] AS Name FROM {} WHERE CompanyName IS NOT NULL
 sql_dim_company_source = SELECT  CompanyID, [Name] as [CompanyName] FROM {} WHERE [Name] IS NOT NULL
 sql_update_company_source = UPDATE [Config].[CompanyDataRaw] SET CompanyID = {} WHERE ID = {}
 
@@ -40,6 +40,8 @@ sql_program_insert = INSERT INTO[Config].[CompanyAggProgram] Values (?,?,?,?,?,?
 [db_sql_cbinsights]
 sql_cbinsights_insert = INSERT INTO [CBINSIGHTS].[CBInsightsFundingData] VALUES (?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?)
 
+[db_sql_osvp]
+sql_osvp_insert = INSERT INTO
 
 [db_sql_crunchbase]
 sql_organizations_insert = INSERT INTO [CRUNCHBASE].[OrganizationsSummary] VALUES (?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?)
