--- a/Shared/config.ini
+++ b/Shared/config.ini
@@ -2,8 +2,8 @@
 #bap quarterly ETL
 [db_connect]
 
-conn = DRIVER={/usr/local/lib/libmsodbcsql.13.dylib};Server=10.101.2.74;Database=MDCRaw;uid=mdc_user;pwd=riverByThe@lakes;
-#conn = DRIVER={/usr/local/lib/libmsodbcsql.13.dylib};Server=10.101.2.74;Database=MaRSDataCatalyst;uid=mdc_user;pwd=riverByThe@lakes;
+#conn = DRIVER={/usr/local/lib/libmsodbcsql.13.dylib};Server=10.101.2.74;Database=MDCRaw;uid=mdc_user;pwd=riverByThe@lakes;
+conn = DRIVER={/usr/local/lib/libmsodbcsql.13.dylib};Server=10.101.2.74;Database=MaRSDataCatalyst;uid=mdc_user;pwd=riverByThe@lakes;
 
 #File paths
 [box_file_path]
@@ -12,6 +12,7 @@ path_bap_source = Box Sync/WorkBench/BAP/BAP_FY18/FY18_Q3/for QA
 path_bap_qa = Box Sync/WorkBench/BAP/BAP_FY18/FY18_Q3/QA
 path_bap_etl = Box Sync/WorkBench/BAP/BAP_FY18/FY18_Q3/for ETL
 path_bap_combined = Box Sync/WorkBench/BAP/BAP_FY18/FY18_Q3/Combined
+path_bap_company_matching = /Users/mnadew/Box Sync/WorkBench/BAP/BAP_FY18/FY18_Q3/Match
 
 path_cbinsights = Box Sync/WorkBench/CB_Insights/for ETL
 path_crunchbase = Box Sync/mnadew/IE/Data/ETL/CrunchBase
