Shared class refactoring and clean up.

--- a/Shared/config.ini
+++ b/Shared/config.ini
@@ -2,8 +2,8 @@
 #bap quarterly ETL
 [db_connect]
 
-#conn = DRIVER={/usr/local/lib/libmsodbcsql.13.dylib};Server=10.101.2.74;Database=MDCRaw;uid=mdc_user;pwd=riverByThe@lakes;
-conn = DRIVER={/usr/local/lib/libmsodbcsql.13.dylib};Server=10.101.2.74;Database=MaRSDataCatalyst;uid=mdc_user;pwd=riverByThe@lakes;
+conn = DRIVER={/usr/local/lib/libmsodbcsql.13.dylib};Server=10.101.2.74;Database=MDCRaw;uid=mdc_user;pwd=riverByThe@lakes;
+#conn = DRIVER={/usr/local/lib/libmsodbcsql.13.dylib};Server=10.101.2.74;Database=MaRSDataCatalyst;uid=mdc_user;pwd=riverByThe@lakes;
 
 #File paths
 [box_file_path]
@@ -24,6 +24,7 @@ path_tdw = Box Sync/mnadew/IE/Data/ETL/TDW
 path_tr = Box Sync/mnadew/IE/Data/ETL/TR
 path_web_scrape = Box Sync/mnadew/IE/Data/ETL/WEBSCRAPE
 path_data = Box Sync/mnadew/IE/Data
+path_other = Box Sync/WorkBench/MISC/Data
 
 path_validI = /Users/mnadew/Box Sync/WorkBench/BAP/BAP_FY18/BAP Quarterly Numbers Validation
 path_validII = /Users/mnadew/Box Sync/WorkBench/BAP/BAP_FY18/BAP Quarterly Numbers Validation
