BAP related refactoring and refining.

--- a/Shared/config.ini
+++ b/Shared/config.ini
@@ -2,8 +2,9 @@
 #bap quarterly ETL
 [db_connect]
 
-conn = DRIVER={/usr/local/lib/libmsodbcsql.13.dylib};Server=10.101.2.74;Database=MDCRaw;uid=mdc_user;pwd=riverByThe@lakes;
-#conn = DRIVER={/usr/local/lib/libmsodbcsql.13.dylib};Server=10.101.2.74;Database=MaRSDataCatalyst;uid=mdc_user;pwd=riverByThe@lakes;
+#conn = DRIVER={/usr/local/lib/libmsodbcsql.13.dylib};Server=10.101.2.74;Database=MDCRaw;uid=mdc_user;pwd=riverByThe@lakes;
+conn = DRIVER={/usr/local/lib/libmsodbcsql.13.dylib};Server=10.101.2.74;Database=MaRSDataCatalyst;uid=mdc_user;pwd=riverByThe@lakes;
+#conn = DRIVER={/usr/local/lib/libmsodbcsql.13.dylib};Server=10.101.2.74;Database=MaRSDataCatalyst_Dev2017aug;uid=mdc_user;pwd=riverByThe@lakes;
 
 #File paths
 [box_file_path]
@@ -28,9 +29,11 @@ path_other = Box Sync/WorkBench/MISC/Data
 
 path_validI = /Users/mnadew/Box Sync/WorkBench/BAP/BAP_FY18/BAP Quarterly Numbers Validation
 path_validII = /Users/mnadew/Box Sync/WorkBench/BAP/BAP_FY18/BAP Quarterly Numbers Validation
+path_validIII = /Users/mnadew/Box Sync/WorkBench/BAP/BAP_FY18/BAP Quarterly Numbers Validation
 
 path_bap_validation_quarter_one = /Users/mnadew/Box Sync/WorkBench/BAP/BAP_FY18/FY18_Q1/for ETL
 path_bap_validation_quarter_two = /Users/mnadew/Box Sync/WorkBench/BAP/BAP_FY18/FY18_Q2/for ETL
+path_bap_validation_quarter_three = /Users/mnadew/Box Sync/WorkBench/BAP/BAP_FY18/FY18_Q3/for ETL
 
 
 # File types
