--- a/Shared/config_sql.ini
+++ b/Shared/config_sql.ini
@@ -27,11 +27,12 @@ sql_get_max = SELECT MAX({}) AS MaxID FROM {}
 sql_data_by_batch = SELECT * FROM {} WHERE BatchID IN {}
 
 [da_sql_company]
-sql_dim_company_insert = INSERT INTO [Reporting].[DimCompany] VALUES ({},\'{}\',\'{}\',\'{}\',\'{}\',\'{}\',\'{}\',\'{}\',\'{}\',{},\'{}\',\'{}\')
+#sql_dim_company_insert = INSERT INTO [Reporting].[DimCompany] VALUES ({},\'{}\',{},{},{},{},{},\'{}'\,{},{},\'{}\',\'{}\')
+sql_dim_company_insert = INSERT INTO [Reporting].[DimCompany] VALUES ({},'{}',{},{},{},{},{},'{}',{},{},'{}','{}')
 sql_dim_company_source_insert = INSERT INTO [Reporting].[DimCompanySource] VALUES ({},{},\'{}\',\'{}\',{},{},\'{}\',\'{}\',\'{}\'
-sql_dim_company_source_update = UPDATE [Reporting].[DimCompanySource] SET CompanyID = {} WHERE Name = \'{}\'
+sql_dim_company_source_update = UPDATE [Reporting].[DimCompanySource] SET CompanyID = {} WHERE Name = '{}'
 sql_dim_company = SELECT  CompanyID,[CompanyName] AS Name FROM {} WHERE CompanyName IS NOT NULL
-sql_dim_company_source = SELECT  CompanyID, [Name] as [CompanyName] FROM {} WHERE [Name] IS NOT NULL
+sql_dim_company_source = SELECT  CompanyID, [Name] FROM {} WHERE [Name] IS NOT NULL
 sql_update_company_source = UPDATE [Config].[CompanyDataRaw] SET CompanyID = {} WHERE ID = {}
 
 [db_sql_bap]
