--- a/Shared/config.ini
+++ b/Shared/config.ini
@@ -1,7 +1,5 @@
-
-#bap quarterly ETL
+#Database connection
 [db_connect]
-
 #conn = DRIVER={/usr/local/lib/libmsodbcsql.13.dylib};Server=10.101.2.74;Database=MDCRaw;uid=mdc_user;pwd=riverByThe@lakes;
 conn = DRIVER={/usr/local/lib/libmsodbcsql.13.dylib};Server=10.101.2.74;Database=MaRSDataCatalyst;uid=mdc_user;pwd=riverByThe@lakes;
 #conn = DRIVER={/usr/local/lib/libmsodbcsql.13.dylib};Server=10.101.2.74;Database=MaRSDataCatalyst_Dev2017aug;uid=mdc_user;pwd=riverByThe@lakes;
@@ -25,7 +23,7 @@ path_tdw = Box Sync/mnadew/IE/Data/ETL/TDW
 path_tr = Box Sync/mnadew/IE/Data/ETL/TR
 path_web_scrape = Box Sync/mnadew/IE/Data/ETL/WEBSCRAPE
 path_data = Box Sync/mnadew/IE/Data
-path_other = Box Sync/WorkBench/MISC/Data
+path_other = Box Sync/Innovation Economy/Projects/Survey Fy18 Planning/Templates/RIC target lists completed/ETL
 
 path_validI = /Users/mnadew/Box Sync/WorkBench/BAP/BAP_FY18/BAP Quarterly Numbers Validation
 path_validII = /Users/mnadew/Box Sync/WorkBench/BAP/BAP_FY18/BAP Quarterly Numbers Validation
