--- a/Shared/config.ini
+++ b/Shared/config.ini
@@ -1,7 +1,8 @@
 #Database connection
 [db_connect]
-#conn = DRIVER={/usr/local/lib/libmsodbcsql.13.dylib};Server=10.101.2.74;Database=MDCRaw;uid=mdc_user;pwd=riverByThe@lakes;
-conn = DRIVER={/usr/local/lib/libmsodbcsql.13.dylib};Server=10.101.2.74;Database=MaRSDataCatalyst;uid=mdc_user;pwd=riverByThe@lakes;
+
+conn = DRIVER={/usr/local/lib/libmsodbcsql.13.dylib};Server=10.101.2.74;Database=MDCRaw;uid=mdc_user;pwd=riverByThe@lakes;
+;conn = DRIVER={/usr/local/lib/libmsodbcsql.13.dylib};Server=10.101.2.74;Database=MaRSDataCatalyst;uid=mdc_user;pwd=riverByThe@lakes;
 #conn = DRIVER={/usr/local/lib/libmsodbcsql.13.dylib};Server=10.101.2.74;Database=MaRSDataCatalyst_Dev2017aug;uid=mdc_user;pwd=riverByThe@lakes;
 
 #File paths
