--- a/Shared/config.ini
+++ b/Shared/config.ini
@@ -92,5 +92,6 @@ insert_campaigns = INSERT INTO SURVEY.Campaigns (WHAT_HEADERS) VALUES (WHAT_VALU
 campaigns_for_survey = SELECT id FROM SURVEY.Campaigns WHERE survey_id = WHAT_SURVEY_ID
 emails_for_campaign = SELECT id FROM SURVEY.Email_Messages WHERE campaign_id = WHAT_CAMPAIGN
 insert_emails = INSERT INTO SURVEY.Email_Messages (WHAT_HEADERS) VALUES (WHAT_VALUES)
+surveys = SELECT * FROM SURVEY.Surveys
 
 
