added survey deletion func

--- a/Shared/config.ini
+++ b/Shared/config.ini
@@ -92,5 +92,12 @@ campaigns_for_survey = SELECT id FROM SURVEY.Campaigns WHERE survey_id = WHAT_SU
 emails_for_campaign = SELECT id FROM SURVEY.Email_Messages WHERE campaign_id = WHAT_CAMPAIGN
 insert_emails = INSERT INTO SURVEY.Email_Messages (WHAT_HEADERS) VALUES (WHAT_VALUES)
 surveys = SELECT * FROM SURVEY.Surveys
+del_all_for_survey = DECLARE @survey_id INT SET @survey_id = WHAT_SURVEY DELETE A FROM SURVEY.Question_Answers A INNER JOIN SURVEY.Questions Q ON A.question_id = Q.id INNER JOIN SURVEY.Surveys S ON Q.survey_id = S.id WHERE S.id = @survey_id DELETE R FROM SURVEY.Survey_Responses R WHERE R.survey_id = @survey_id DELETE O FROM SURVEY.Question_Options O INNER JOIN SURVEY.Questions Q ON O.question_id = Q.id INNER JOIN SURVEY.Surveys S ON Q.survey_id = S.id WHERE S.id = @survey_id DELETE Q FROM SURVEY.Questions Q WHERE Q.survey_id = @survey_id DELETE E FROM SURVEY.Email_Messages E INNER JOIN SURVEY.Campaigns C ON E.campaign_id = C.id WHERE C.survey_id = @survey_id DELETE C FROM SURVEY.Campaigns C WHERE C.survey_id = @survey_id
+select_questions = SELECT id FROM SURVEY.Questions Q WHERE Q.survey_id = WHAT_SURVEY
+select_responses = SELECT id FROM SURVEY.Survey_Responses R WHERE R.survey_id = WHAT_SURVEY
+select_options = SELECT O.id FROM SURVEY.Question_Options O INNER JOIN SURVEY.Questions Q ON O.question_id = Q.id WHERE Q.survey_id = WHAT_SURVEY
+select_answers = SELECT A.id FROM SURVEY.Question_Answers A INNER JOIN SURVEY.Questions Q ON A.question_id = Q.id WHERE Q.survey_id = WHAT_SURVEY
+select_emails = SELECT E.id FROM SURVEY.Email_Messages E INNER JOIN SURVEY.Campaigns C ON E.campaign_id = C.id WHERE C.survey_id = WHAT_SURVEY
+select_campaigns = SELECT C.id FROM SURVEY.Campaigns C WHERE C.survey_id = WHAT_SURVEY
 
 
