added bulk resp stat report func

--- a/Shared/config.ini
+++ b/Shared/config.ini
@@ -100,4 +100,5 @@ select_answers = SELECT A.id FROM SURVEY.Question_Answers A INNER JOIN SURVEY.Qu
 select_emails = SELECT E.id FROM SURVEY.Email_Messages E INNER JOIN SURVEY.Campaigns C ON E.campaign_id = C.id WHERE C.survey_id = WHAT_SURVEY
 select_campaigns = SELECT C.id FROM SURVEY.Campaigns C WHERE C.survey_id = WHAT_SURVEY
 
-
+[paths]
+survey2018_response_stats = /Users/gcree/Box Sync/Workbench/BAP/Annual Survey FY2018/Response Statuses/
