Rest api request method name change.

--- a/Shared/config.ini
+++ b/Shared/config.ini
@@ -1,15 +1,16 @@
 #Database connection
 [db_connect]
 #conn = DRIVER={/usr/local/lib/libmsodbcsql.13.dylib};Server=10.101.2.74;Database=MDCRaw;uid=mdc_user;pwd=riverByThe@lakes;
-#conn = DRIVER={/usr/local/lib/libmsodbcsql.13.dylib};Server=10.101.2.74;Database=MaRSDataCatalyst;uid=mdc_user;pwd=riverByThe@lakes;
+conn = DRIVER={/usr/local/lib/libmsodbcsql.13.dylib};Server=10.101.2.74;Database=MaRSDataCatalyst;uid=mdc_user;pwd=riverByThe@lakes;
 #conn = DRIVER={/usr/local/lib/libmsodbcsql.13.dylib};Server=10.101.2.74;Database=MaRSDataCatalyst_Dev2017aug;uid=mdc_user;pwd=riverByThe@lakes;
-conn = DRIVER={/usr/local/lib/libmsodbcsql.13.dylib};Server=10.101.2.74;Database=MDC_DEV;uid=mdc_user;pwd=riverByThe@lakes;
+#conn = DRIVER={/usr/local/lib/libmsodbcsql.13.dylib};Server=10.101.2.74;Database=MDC_DEV;uid=mdc_user;pwd=riverByThe@lakes;
 #File paths
 [box_file_path]
 path_bap = Box Sync/mnadew/IE/Data/ETL/BAP
 path_bap_source = Box Sync/WorkBench/BAP/BAP_FY18/FY18_Q3/for QA
 path_bap_qa = Box Sync/WorkBench/BAP/BAP_FY18/FY18_Q3/QA
 path_bap_etl = Box Sync/WorkBench/BAP/BAP_FY18/FY18_Q3/for ETL
+
 path_bap_combined = Box Sync/WorkBench/BAP/BAP_FY18/FY18_Q3/Combined
 path_bap_company_matching = /Users/mnadew/Box Sync/WorkBench/BAP/BAP_FY18/FY18_Q3/Match
 
@@ -23,7 +24,7 @@ path_tdw = Box Sync/mnadew/IE/Data/ETL/TDW
 path_tr = Box Sync/mnadew/IE/Data/ETL/TR
 path_web_scrape = Box Sync/mnadew/IE/Data/ETL/WEBSCRAPE
 path_data = Box Sync/mnadew/IE/Data
-path_other = Box Sync/Innovation Economy/Projects/Survey Fy18 Planning/Templates/RIC target lists completed/ETL/00 Matching
+path_other = Box Sync/Innovation Economy/Projects/Survey Fy18 Planning/Templates/RIC target lists completed/ETL
 path_dw = Box Sync/mnadew/IE/Data/ETL/DW
 
 path_validI = /Users/mnadew/Box Sync/WorkBench/BAP/BAP_FY18/BAP Quarterly Numbers Validation
