Shared coldes refactoring and changes.

--- a/Shared/config.ini
+++ b/Shared/config.ini
@@ -17,7 +17,7 @@ path_bap_company_matching = /Users/mnadew/Box Sync/WorkBench/BAP/BAP_FY18/FY18_Q
 path_cbinsights = Box Sync/WorkBench/CB_Insights/for ETL
 path_crunchbase = Box Sync/mnadew/IE/Data/ETL/CrunchBase
 path_cvca = Box Sync/mnadew/IE/Data/ETL/CVCA
-path_iaf = Box Sync/mnadew/IE/Data/ETL/IAF
+path_iaf = Box Sync/Workbench/IAF/ETL Prep/2017
 path_osvp = Box Sync/mnadew/IE/Data/ETL/OSVP
 path_survey = Box Sync/mnadew/IE/Data/ETL/SURVEY
 path_tdw = Box Sync/mnadew/IE/Data/ETL/TDW
@@ -103,4 +103,4 @@ select_emails = SELECT E.id FROM SURVEY.Email_Messages E INNER JOIN SURVEY.Campa
 select_campaigns = SELECT C.id FROM SURVEY.Campaigns C WHERE C.survey_id = WHAT_SURVEY
 
 [paths]
-survey2018_response_stats = /Users/gcree/Box Sync/Workbench/BAP/Annual Survey FY2018/Response Statuses/
+survey2018_response_stats = Box Sync/Workbench/BAP/Annual Survey FY2018/Response Statuses/
